# databricks-neo4j-workshop

./: .gitignore  CLAUDE.md  README.md  agenda.md  fix-warnings.md  simple-notebook.md
Lab_0_Sign_In/: README.md
Lab_1_Aura_Setup/: Aura_Free_Trial.md  README.md  SAMPLE_QUERIES.md
Lab_1_Aura_Setup/slides/: 01-intro.md  03-why-graphs.md  07-lab-steps-1.md  08-lab-steps-2.md
Lab_2_Databricks_ETL_Neo4j/: 01_aircraft_etl_to_neo4j.ipynb  02_gds_louvain_maintenance.ipynb  02_load_neo4j_full.ipynb  03_gds_knn_aircraft.ipynb  03_gds_louvain_maintenance.ipynb  04_gds_knn_aircraft.ipynb  04_gds_pagerank_airports.ipynb  05_gds_node_similarity_aircraft.ipynb  05_gds_pagerank_airports.ipynb  06_gds_node_similarity_aircraft.ipynb  README.md  aura-explore.md  data-exploring.md  gds-exploring.md
Lab_3_Semantic_Search/: 01_data_and_embeddings.ipynb  02_graphrag_retrievers.ipynb  03_data_and_embeddings.ipynb  03_hybrid_retrievers.ipynb  04_graphrag_retrievers.ipynb  04_mcp_graph_queries.ipynb  06_mcp_graph_queries.ipynb  README.md  SAMPLE_QUERIES.md  data_utils.py
Lab_4_Compound_AI_Agents/: PART_A.md  PART_B.md  README.md
images/: lab-architecture-overview.excalidraw
lab_setup/: DBX_LOCAL_DEVELOPMENT.md  README.md
lab_setup/auto_scripts/: README.md  load_lakehouse_data.py
lab_setup/notebook_validation/: README.md
site/: README.md  antora-playbook.yml  antora.yml  nav.adoc  package-lock.json  package.json
slides/: README.md  organize.md  package-lock.json
slides/agents/: 01-from-retrievers-to-agents-slides.md  02-power-of-graphrag-slides.md  08-from-retrievers-to-agents-slides.md
slides/docs/: slides.md
slides/genai-foundations/: 02-genai-and-limitations-slides.md  03-traditional-rag-slides.md  04-context-and-rag-slides.md
slides/governance/: auth-sync-slides.md
slides/graph-ml/: 03-graph-enrichment-slides.md  04-future-graph-enrichment-slides.md
slides/kg-construction/: 05-building-knowledge-graphs-slides.md  06-schema-design-slides.md  07-chunking-slides.md  08-entity-resolution-slides.md  09-vectors-slides.md
slides/overview-databricks-neo4j/: 01-databricks-neo4j-integration-slides.md  SUMMARY.md
slides/overview-knowledge-graph/: 01-neo4j-aura-overview-slides.md
slides/platform-overview/: 01-databricks-neo4j-integration-slides.md  01-intro-databricks-neo4j-slides.md  01-neo4j-aura-overview-slides.md  01-workshop-over.md
slides/retrieval-patterns/: 01-retrievers-overview-slides.md  (+3 more)
vocareum/: SETUP_GUIDE.md
workshop-setup/: EXAMPLE_QUERIES.md  MCP-MANUAL-SETUP.md  README.md  cluster_setup.py  neo4j-mcp-http-connection.ipynb  workshop_setup.ipynb
workshop-setup/auto_scripts/: README.md  load_lakehouse_data.py  pyproject.toml
workshop-setup/auto_scripts/src/databricks_setup/: __init__.py  cluster.py  config.py  data_upload.py  lakehouse_tables.py  libraries.py  log.py  main.py  models.py  utils.py  warehouse.py
workshop-setup/notebook_validation/: MEMORY.md  README.md  clean.sh  cluster_utils.sh  pyproject.toml  submit.sh  upload.sh  validate.sh
workshop-setup/notebook_validation/agent_modules/: __init__.py  check_neo4j.py  data_utils.py  profile_lab2_load.py  recreate_lakehouse_tables.py  run_lab2_01.py  run_lab2_02.py  run_lab2_03.py  run_lab2_04.py  run_lab2_05.py  run_lab3_01.py  run_lab3_02.py  run_lab3_03.py  run_lab3_04.py  run_lab3_04_uc.py  run_lab3_05.py  test_hello.py  verify_lab2.py
workshop-setup/populate_aircraft_db/: DATA_GENERATOR.md  README.md  pyproject.toml
workshop-setup/populate_aircraft_db/src/populate_aircraft_db/: agent_samples.py  config.py  loader.py  main.py  pipeline.py  samples.py  schema.py
workshop-setup/populate_aircraft_db/src/populate_aircraft_db/generator/: cli.py  config.py  fleet.py  maintenance.py  operations.py  removals.py  sensors.py  specs.py  writers.py
workshop-setup/verify/: pyproject.toml
workshop-setup/verify/src/verify_data_exploring/: main.py
workshop-setup/verify/src/verify_gds/: main.py  nb04_features.py
workshop-setup/verify/src/verify_lab2/: main.py
(+80 files in other folders)
