[project]
name = "notebook-validation"
version = "0.1.0"
description = "Cluster-submitted validation scripts and agent modules for the Aircraft Digital Twin workshop"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.17.0",
    "neo4j-graphrag>=1.0.0",
    "pydantic>=2.7.0",
    "mlflow>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyspark>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_modules"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_modules"]
