[project]
name = "populate-aircraft-db"
version = "0.1.0"
description = "Standalone Neo4j Aura data loader for the Aircraft Digital Twin dataset"
requires-python = ">=3.11"
dependencies = [
    "faker>=24.0.0",
    "neo4j>=6.2.0",
    "neo4j-graphrag[openai,sentence-transformers]>=1.17.0",
    "numpy>=1.26.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.49.0",
    "neo4j-graphrag[anthropic]>=1.17.0",
]

[project.scripts]
populate-aircraft-db = "populate_aircraft_db.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/populate_aircraft_db"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
