[project]
name = "verify-gds"
version = "0.1.0"
description = "Verify GDS Cypher queries for the Aircraft Digital Twin graph"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.17.0",
    "pandas>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
verify-gds = "verify_gds.main:app"
verify-lab2 = "verify_lab2.main:app"
verify-data-exploring = "verify_data_exploring.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verify_gds", "src/verify_lab2", "src/verify_data_exploring"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
